update laporan penjualan